删除兴趣爱好

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,7 +9,7 @@ nav:
   - 项目经验: projects.md
   - 职业技能: skills.md
   - 证书奖励: certificates.md
-  - 兴趣爱好: interests.md
+  # - 兴趣爱好: interests.md
   # - 简历下载: download.md
 theme:
   name: mkdocs
